--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "bcrypt": "^5.0.0",
         "dateformat": "^4.5.1",
+        "jquery": "^3.6.0",
         "js-cookie": "^2.2.1",
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.29.1",
@@ -17,6 +18,7 @@
         "next": "10.1.1",
         "react": "17.0.2",
         "react-chartjs-2": "^3.0.3",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "react-icons": "^4.2.0"
     }
 }
