--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "antd": "^4.15.4",
         "bcrypt": "^5.0.0",
         "dateformat": "^4.5.1",
         "jquery": "^3.6.0",
@@ -17,6 +18,7 @@
         "mongoose": "^5.10.14",
         "next": "10.1.1",
         "react": "17.0.2",
+        "react-bootstrap": "^1.5.2",
         "react-chartjs-2": "^3.0.3",
         "react-dom": "17.0.2",
         "react-icons": "^4.2.0"
