--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "antd": "^4.15.4",
         "bcrypt": "^5.0.0",
+        "crypto": "^1.0.1",
         "dateformat": "^4.5.1",
         "jquery": "^3.6.0",
         "js-cookie": "^2.2.1",
@@ -20,7 +21,9 @@
         "react": "17.0.2",
         "react-bootstrap": "^1.5.2",
         "react-chartjs-2": "^3.0.3",
+        "react-cookie": "^4.0.3",
         "react-dom": "17.0.2",
-        "react-icons": "^4.2.0"
+        "react-icons": "^4.2.0",
+        "uuid": "^8.3.2"
     }
 }
