--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "@sendgrid/mail": "^7.4.4",
         "antd": "^4.15.4",
         "bcrypt": "^5.0.0",
         "crypto": "^1.0.1",
@@ -17,7 +18,7 @@
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.29.1",
         "mongoose": "^5.10.14",
-        "next": "10.1.1",
+        "next": "^10.2.0",
         "react": "17.0.2",
         "react-bootstrap": "^1.5.2",
         "react-chartjs-2": "^3.0.3",
