--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
         "moment": "^2.29.1",
         "mongoose": "^5.10.14",
         "next": "^10.2.0",
+        "nodemailer": "^6.6.0",
+        "nodemailer-smtp-transport": "^2.4.2",
         "react": "17.0.2",
         "react-bootstrap": "^1.5.2",
         "react-chartjs-2": "^3.0.3",
         "react-cookie": "^4.0.3",
+        "react-datepicker": "^3.8.0",
         "react-dom": "17.0.2",
         "react-icons": "^4.2.0",
         "uuid": "^8.3.2"
